# distributed-systems-agh

./: .gitignore
A1_SmartHome/clientPython/: smarthome_ice.py
A1_SmartHome/gradle/wrapper/: gradle-wrapper.properties
I1_DynamicInvocation/: settings.gradle
I1_DynamicInvocation/client/: client.py  main.cpp
I1_DynamicInvocation/proto/: calculator.proto
RabbitMQ/gradle/wrapper/: gradle-wrapper.properties
lab1/zad2/: PythonUdpClient.py
lab1/zad3/: PythonUdpClient.py
lab2/: distributed.py  doodle.py
lab3/: config.client
lab4/Serialization/: person-proto.ser  person.proto
lab4/Serialization/gen_cpp/: person.pb.cc  person.pb.h
lab4/Serialization/src/: ProtoSerialization.java
lab5/lab-ray-source/: lab-ray.ipynb
ray/: .ipynb  Chunk.py  Config.py  Get.py  NameNode.py  Pingable.py  Remove.py  StorageNode.py  Store.py  Update.py
xd/A1_SmartHome/: build.gradle
xd/A1_SmartHome/clientPython/: client.py
xd/I1_DynamicInvocation/: build.gradle
zad1/: CMakeLists.txt  Commons.hpp  Init.hpp  client.cpp  oswiadczenie.txt  server.cpp
zad1/archimedes/cmake/: library.cmake
zad1/archimedes/include/: Exception.h  Scene.h  Text.h
zad1/archimedes/include/ecs/: View.h
zad1/archimedes/include/math/: Math.h
zad1/archimedes/include/net/: NetException.h  Socket.h  TCPSocket.h
zad1/archimedes/include/utils/: Assert.h
zad1/archimedes/src/: Exception.cpp
zad1/archimedes/src/net/: Socket.cpp  TCPSocket.cpp
zad1/archimedes/tests/net/: IPv4Network_Test.cpp
zad2/: app.py  index.html
zad6/: build.gradle  settings.gradle
zookeeper/: build.gradle
(+76 files in other folders)
